--- a/_config.yml
+++ b/_config.yml
@@ -7,11 +7,11 @@
 
 # Site settings
 title: Laurie Allen
-email: laurie.allen@gmail.com
+# email: laurie.allen@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   librarian. philadelphian.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://librlaurie.github.io/" # the base hostname & protocol for your site
+url: "http://www.laurieallen.org" # the base hostname & protocol for your site
 twitter_username: librlaurie
 github_username:  librlaurie
 
